--- a/003_note_data_tidying.Rmd
+++ b/003_note_data_tidying.Rmd
@@ -65,4 +65,9 @@ tail(iris)
 # View the last 10 rows
 tail(iris, n = 10)
 
+separate(treatments, year_mo, c("year", "month"))
+
+# Apply separate() to bmi_cc
+bmi_cc_clean <- separate(bmi_cc, col = Country_ISO, into = c("Country", "ISO"), sep = "/")
+
 
