--- a/003_note_data_tidying.Rmd
+++ b/003_note_data_tidying.Rmd
@@ -77,4 +77,4 @@ unite(treatments, year_mo, year, month)
 bmi_cc <- unite(bmi_cc_clean, Country_ISO, Country, ISO, sep = "-")
 
 
-
+# Apply unite() 
