--- a/003_note_data_tidying.Rmd
+++ b/003_note_data_tidying.Rmd
@@ -78,3 +78,7 @@ bmi_cc <- unite(bmi_cc_clean, Country_ISO, Country, ISO, sep = "-")
 
 
 # Apply unite() 
+
+bmi_cc <- unite(bmi_cc_clean, Country_ISO, Country, ISO, sep = "-")
+
+
