--- a/004_note_regration.Rmd
+++ b/004_note_regration.Rmd
@@ -12,9 +12,6 @@ knitr::opts_chunk$set(echo = TRUE)
 plot(child ~ parent, galton)
 plot(jitter(child,4) ~ parent,galton)
 
-
-
-
 #generate the regression line and store it in the variable regrline.
 regrline <- lm(child ~ parent, galton)
 abline(regrline, lwd=3, col='red')
@@ -22,3 +19,6 @@ abline(regrline, lwd=3, col='red')
 
 
 summary(regrline)
+
+
+sddsddssds
