--- a/002_note_R.Rmd
+++ b/002_note_R.Rmd
@@ -19,8 +19,8 @@ summary(cars)
 ```
 
 ## Including Plots
-
-You can also embed plots, for example:
+ 
+You can also embed plots:
 
 ```{r pressure, echo=FALSE}
 plot(pressure)
